# file-windows

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.bat
cmake/: Findpcre2.cmake
pcre2/: CMakeLists.txt
win-headers/: config.h  magic.def  unistd.h
